# setuptools-build-subpackage

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
example/: AUTHORS.rst  setup.cfg  setup.py
example/example/sub_module_a/: setup.cfg
example/example/sub_module_b/: setup.cfg
example/sub_module_a/: setup.cfg  where.py
example/sub_module_b/: where.py
src/setuptools_build_subpackage/: __init__.py  __main__.py
src/setuptools_build_subpackage/command/: build.py  egg_info.py  sdist.py
tests/: test_setuptools_build_subpackage.py
