[metadata]
name = setuptools-build-subpackage
license = Apache License 2.0
license_files =
   LICENSE
description = Package a subfolder as a python distribution
author = Ash Berlin-Taylor
author_email = ash@apache.org
url = https://github.com/ashb/setuptools-build-subpackage
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
project_urls =
    Source Code=https://github.com/ashb/setuptools-build-subpackage
    Bug Tracker=https://github.com/ashb/setuptools-build-subpackage/issues

[options]
zip_safe = False
include_package_data = True
install_requires =
    setuptools>=44.0.0
package_dir=
    =src
packages = find:
python_requires = >=3.5
setup_requires =
    setuptools_scm>=3.3.1

[options.packages.find]
where=src

[options.extras_require]
devel =
  black
  pytest-black
  pytest-cov~=2.10
  pytest-flake8
  pytest-isort
  pytest~=6.0
  wheel

[bdist_wheel]
python-tag=py3

[flake8]
max-line-length = 140
exclude = .eggs,build,dist
extend-ignore = E203, W503
