[metadata]
version = 0.0.0
name = example_sub_moudle_a
license = Apache License 2.0
# Thest paths are relative to the root, not to the sub folder
license_files =
   AUTHORS.rst
   LICENSE
author = Ash Berlin-Taylor
author_email = ash@apache.org

[options]
zip_safe=False
packages = find_namespace:

[options.packages.find]
include =
  example.sub_module_a
  example.sub_module_a.*

[bdist_wheel]
universal = 1
