[metadata]
name = example_sub_moudle_b
license = Apache License 2.0
license_files =
   AUTHORS.rst
   LICENSE
author = Ash Berlin-Taylor
author_email = ash@apache.org

[options]
zip_safe=False
packages = find_namespace:

[options.packages.find]
include =
  example.sub_module_b
  example.sub_module_b.*

[bdist_wheel]
universal = 1
